src/test/ui/error-codes/E0194.stderr
error[E0194]: type parameter `T` shadows another type parameter of the same name
  --> $DIR/E0194.rs:13:26
   |
LL | trait Foo<T> {
   |           - first `T` declared here
LL |     fn do_something(&self) -> T;
LL |     fn do_something_else<T: Clone>(&self, bar: T);
   |                          ^ shadows another type parameter

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0194"
